# fu_gen

./: CMakeLists.txt  LICENSE.txt  README.md
Dependencies/: CMakeLists.txt  glmath.hpp
FuGenDemo/: CMakeLists.txt  Camera2D.h  Camera3D.h  ICamera.h  LegacyMain.cpp  Main.cpp  MainDeterministicTree3D.cpp  MainFractal2D.cpp  MainFractal3D.cpp  MainStochasticTree2D.cpp  MainStochasticTree3D.cpp  README.md  SDL2DemoFramework.cpp  SDL2DemoFramework.h
FuGenDemo/Demo/: DemoCollection.h  DrawModel.cpp  DrawModel.h  DrawSkeleton.h  IDemo.h
FuGenDemo/Demo/Demo2D/: CordateLeaf.cpp  CordateLeaf.h  Demo2D.h  DragonCurve.cpp  DragonCurve.h  QuadraticKochCurve.cpp  QuadraticKockCurve.h  StochasticTree2D.cpp  StochasticTree2D.h
FuGenDemo/Demo/Demo3D/: Demo3D.h  DeterministicTree.cpp  DeterministicTree.h  HilbertCurve.cpp  HilbertCurve.h  StochasticTree3D.cpp  StochasticTree3D.h  TreeDemo.cpp  TreeDemo.h
FuGenDemo/DemoUtils/: DemoTexture.cpp  DemoTexture.h  DrawModel.cpp  DrawModel.h  DrawSkeleton.h  GLInclude.h
FuGenEditor/: CMakeLists.txt
FuGenEditor/Presenter/: CMakeLists.txt  PipelinePresenter.cpp  PipelinePresenter.h  TreeHypergraphPresenter.h  TreeMeshPresenter.h  ViewRefresher.h
FuGenEditor/Presenter/Data/: TreeDataPresenter.h  TreeHypergraphPresenter.cpp  TreeHypergraphPresenter.h  TreeMeshPresenter.cpp  TreeMeshPresenter.h  TreeSkeletonPresenter.cpp  TreeSkeletonPresenter.h
FuGenEditor/Presenter/Elements/: ConnectionVisitor.h  EdgePresenter.h  NodePresenter.h
FuGenEditor/Presenter/Elements/Nodes/: AppNodePresenter.h  HypergraphNodePresenter.cpp  HypergraphNodePresenter.h  MeshNodePresenter.cpp  MeshNodePresenter.h  TurtleNodePresenter.cpp  TurtleNodePresenter.h
FuGenEditor/Test/: CMakeLists.txt  GLViewTest.cpp  GLViewTest.h  GLViewTest.ui  NodeEditorAndPipelineTest.cpp  NodeEditorAndPipelineTest.h  NodeEditorAndPipelineTest.ui  NodeEditorTest.cpp  NodeEditorTest.h  NodeEditorTest.ui  PipelineVisualizationTest.cpp  PipelineVisualizationTest.h  PipelineVisualizationTest.ui
FuGenEditor/View/: FuGenMain.cpp  FuGenWindow.cpp  FuGenWindow.h  FuGenWindow.ui
FuGenEditor/View/EdgeVisualizer/: FuGenGLView.cpp  FuGenGLView.h  GLDrawable.h
FuGenEditor/View/EdgeVisualizer/GL/: GLDrawableList.h  GLEdgeVisualizer.cpp  GLEdgeVisualizer.h  GLExt.cpp  GLExt.h  GLPrimitiveList.h  GLRenderer.h  IGLRenderer.h
FuGenEditor/View/EdgeVisualizer/GL/GraphRenderer/: GLLineStrip.h
FuGenEditor/View/EdgeVisualizer/GL/HypergraphRenderer/: GLCatmullRom.h  GLHypergraphRenderer.h
FuGenEditor/View/EdgeVisualizer/GL/MeshRenderer/: GLTriangleList.h
FuGenEditor/View/NodeEditor/: FuGenNodeEditor.cpp  FuGenNodeEditor.h  HypergraphNodeEditor.cpp  HypergraphNodeEditor.h  HypergraphNodeEditor.ui  MeshNodeEditor.cpp  MeshNodeEditor.h  MeshNodeEditor.ui  TurtleNodeEditor.cpp  TurtleNodeEditor.h  TurtleNodeEditor.ui
FuGenEditor/View/PipelineEditor/: FuGenPipelineEdge.cpp  FuGenPipelineEdge.h  FuGenPipelineEditor.cpp  FuGenPipelineEditor.h  FuGenPipelineNode.cpp  FuGenPipelineNode.h
FuGenLib/: CMakeLists.txt  Const.h
FuGenLib/Data/: MultiMesh.h  TreeHypergraph.h  TreeSkeleton.h
FuGenLib/Filters/: GenerateHypergraph.h
FuGenLib/Filters/HypergraphGenerator/: GenerateHypergraph.cpp  GenerateHypergraph.h
FuGenLib/Filters/L_Systems/: DOL_System.h  OL_System.h  SOL_System.cpp  SOL_System.h
FuGenLib/Filters/MeshGenerator/: LowPolyMeshGenerator.cpp  LowPolyMeshGenerator.h  SegmentAdjuster.h  SegmentGenerator.cpp  SegmentGenerator.h
FuGenLib/Filters/MeshGenerator/Junction/: JunctionGenerator.cpp  JunctionGenerator.h  JunctionMeshGenerator.cpp  JunctionMeshGenerator.h  JunctionOperations.cpp  JunctionOperations.h  OMJunctionGenerator.cpp  OMJunctionGenerator.h  QhJunctionGenerator.h
FuGenLib/Filters/MeshGenerator/Junction/Quickhull/: OMQuickhull.cpp  OMQuickhull.h  QhMesh.cpp  QhMesh.h  QhQuickhull.cpp  QhQuickhull.h
FuGenLib/Filters/Turtles/: Turtle2D.cpp  Turtle2D.h  Turtle2DState.h  Turtle3D.cpp  Turtle3D.h  Turtle3DState.h  TurtleBase.hpp  TurtleInterpreter.h  TurtleStateStack.hpp
FuGenLib/Multithreading/: Job.cpp  Job.h  JobQueue.cpp  JobQueue.h  Spinlock.h  Worker.h
FuGenLib/Utils/: CatmullRom.cpp  CatmullRom.h  GeneralizedCylinder.h  ICurve.h  Quickhull.cpp  Quickhull.h
